feat(682): add filter for deletions
